--- a/src/pinterest/pinterest.css
+++ b/src/pinterest/pinterest.css
@@ -9,6 +9,12 @@ body {
     color: black;
 }
 
+.pinterestbody {
+    width: 100vw;
+    padding: 0;
+    margin: 0;
+}
+
 .menu {
     width: 100vw;
     height: 75px;
@@ -20,7 +26,6 @@ body {
     padding: 0;
     color: black;
     background-color: rgb(255, 255, 255);
-    
 }
 
 .menu input {
@@ -30,6 +35,7 @@ body {
     background-color: rgb(235, 235, 235);
     border: none;
     margin: 0;
+    color: black;
 }
 
 .menu button {
@@ -85,13 +91,22 @@ body {
     color: black;
 }
 
-.home , .homeblogs  {
+.home {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+ .homeblogs  {
     color: black;
     background-color: rgb(226, 226, 226);
     width: 100vw;
     display: grid;
     justify-content: center;
-    padding: 2px 20px 2px 20px;
+    padding: 0px 20px 2px 20px;
+    
 }
 
 .imggrid {
@@ -205,14 +220,14 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    padding-top: 75px;
+    padding-top: 25px;
 }
 
 .creating {
-    width: 100%;
+    width: 100vw;
     height: 100%;
     display: flex;
-    border-top: 1px solid gray;
+    border-top: 1px solid gray;   
 }
 
 .createNew {
