--- a/src/my-profilio/myprofilio.css
+++ b/src/my-profilio/myprofilio.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    color: rgb(0, 157, 255);
 }
 
 body {
@@ -20,6 +21,7 @@ section {
 
 .allaboutpf {
     width: 100vw;
+    background-color: black;
 }
 
 a {
@@ -349,6 +351,7 @@ button {
     justify-content: center;
     flex-direction: column;
     padding-top: 70px;
+    background-color: black;
 }
 
 .didBlogs {
@@ -384,6 +387,7 @@ button {
     align-items: center;
     justify-content: space-evenly;
     padding-top: 70px;
+    background-color: black;
 }
 
 .locationAndEmail {
