--- a/src/pinterest/pinterest.css
+++ b/src/pinterest/pinterest.css
@@ -9,10 +9,17 @@ body {
     color: black;
 }
 
+.pinlink {
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
 .pinterestbody {
     width: 100vw;
     padding: 0;
     margin: 0;
+    position: relative;
 }
 
 .menu {
@@ -26,6 +33,9 @@ body {
     padding: 0;
     color: black;
     background-color: rgb(255, 255, 255);
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .menu input {
@@ -101,7 +111,6 @@ body {
 
  .homeblogs  {
     color: black;
-    background-color: rgb(226, 226, 226);
     width: 100vw;
     display: grid;
     justify-content: center;
@@ -170,7 +179,11 @@ body {
 .userchoice .overlay button {
     border-radius: 30px;
     height: 50px;
-    font-weight: bold;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
 
 .userchoice .overlay .saveandmore {
@@ -220,14 +233,14 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    padding-top: 25px;
 }
 
 .creating {
     width: 100vw;
     height: 100%;
     display: flex;
-    border-top: 1px solid gray;   
+    border-top: 1px solid rgb(5, 5, 5);
+    padding-top: 80px;
 }
 
 .createNew {
@@ -440,4 +453,153 @@ body {
 .facts .moreoptions i {
     color: gray;
     margin-left: 10px;
+}
+
+.soloImage {
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 80px;
+    position: relative;
+}
+
+.oneimage {
+    width: 65%;
+    height: 650px;
+    border-radius: 30px;
+    overflow: hidden;
+    display: flex;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 30px;
+}
+
+.oneimage .choseimg {
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.oneimage .factsAndCom {
+    height: 100%;
+    width: 50%;
+    color: black;
+    position: relative;
+}
+
+.headericonsone {
+    color: black;
+    width: 100%;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.headericonsone i {
+    margin: 10px;
+    color: black;
+}
+
+.headericonsone button {
+    background-color: red;
+    border-radius: 30px;
+}
+
+.headericonsone span {
+    margin-right: 12px;
+    color: black;
+}
+
+.headericonsone .profileone{
+    margin-left: 150px;
+}
+
+.headericonsone .ardownone {
+    margin-right: 2px;
+    margin-left: 0px;
+    padding: 0;
+}
+
+.profileInfo {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 10%;
+}
+
+.profilenameone {
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: black;
+}
+
+.profilenameone span{
+    color: black;
+    font-weight: bold;
+}
+
+.profilenameone .profileone {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    margin-right: 12px;
+}
+
+.profileInfo button {
+    background-color: white;
+    border: 1px solid rgb(203, 203, 203);
+    color: black;
+    border-radius: 30px;
+    font-weight: 400;
+}
+
+.comments {
+    color: black;
+    height: 53%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+    padding-top: 0;
+}
+
+.comments span {
+    font-weight: 700;
+    color: black;
+    cursor: pointer;
+}
+
+.comments i {
+    color: black;
+    cursor: pointer;
+}
+
+.factsAndCom .writecom {
+    width: 90%;
+    border-radius: 30px;
+    border-color: rgb(199, 199, 199);
+    color: black;
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding-right: 47px;
+}
+
+.factsAndCom .smileone {
+    color: black;
+    position: absolute;
+    bottom: 32px;
+    right: 50px;
+    font-size: 25px;
 }
