--- a/src/my-profilio/myprofilio.css
+++ b/src/my-profilio/myprofilio.css
@@ -69,6 +69,11 @@ section {
     opacity: 1;
   }
 
+.searchicon {
+    width: 50px;
+    height: 50px;
+}
+
 .nightmode {
     margin: 0;
     padding: 0;
@@ -621,8 +626,6 @@ button {
     transition: all 0s;
   }
 
-  /* From Uiverse.io by erfangh2 */ 
-/* This is an example, feel free to delete this code */
 .tooltip-container {
     --background: #333333;
     --color: #e8e8e8;
